# OptionalStruct

./: .travis.yml  Cargo.toml  LICENSE  README.md
export/: Cargo.toml
export/src/: lib.rs
implementation/: Cargo.toml
implementation/src/: lib.rs  test.rs
internal/: Cargo.toml
internal/src/: lib.rs
macro_impl/: Cargo.toml
macro_impl/src/: lib.rs
optional_struct_macro/: Cargo.toml
optional_struct_macro/src/: lib.rs  opt_struct.rs  test.rs
src/: lib.rs
tests/: applicable_generic.rs  base_option.rs  builder.rs  derive.rs  empty.rs  generics.rs  nested.rs  nested_multiple.rs  nested_optional.rs  nested_skip.rs  nested_wrap_option.rs  renamed.rs  reverse_wrapping.rs  serde_skip.rs  simple.rs  skip.rs  tuple_struct.rs  with_cfg_attribute.rs  with_extra_derive.rs  wrap_option.rs
