[package]
name = "optional_struct"
version = "0.4.0"
authors = ["Paul Lesur <github@lesurp.fr>"]
description = """
Crate defining a macro that will generate, from a structure, another structure with only Option<T> fields
"""
readme = "README.md"
categories = ["config"]
keywords = ["macro", "configuration"]
license = "Apache-2.0"
repository = "https://github.com/lesurp/OptionalStruct"
edition = '2021'

[workspace]
members = ["export", "implementation"]

[dependencies]
optional_struct_export = { version = "0.4.0", path = "export" }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
serde = "1.0.193"
serde_json = "1.0.108"