[package]
name = "optional_struct"
version = "0.4.1"
authors = ["Paul Lesur <github@lesurp.fr>"]
description = """
Crate defining a macro that will generate, from a structure, another structure with only Option<T> fields
"""
readme = "README.md"
categories = ["config"]
keywords = ["macro", "configuration"]
license = "Apache-2.0"
repository = "https://github.com/lesurp/OptionalStruct"
edition = '2021'

[workspace]
members = ["optional_struct_macro"]

[dependencies]
optional_struct_macro = { version = "0.4.1", path = "optional_struct_macro" }
serde = { version = "1.0.193", features = ["derive"], default-features = false }

[dev-dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
