[package]
name = "optional_struct_export"
version = "0.3.2"
edition = "2021"
description = "Helper crate exporting the proc_macro as an actual proc_macro for the optional_struct crate"
license = "Apache-2.0"
repository = "https://github.com/lesurp/OptionalStruct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optional_struct_macro_impl = { version = "0.3.2", path = "../implementation" }
quote = { version = "1.0.33", features = [] }

[lib]
proc-macro = true