[package]
name = "implementation"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.70", features = [] }
quote = { version = "1.0.33", features = [] }
syn = { version = "2.0.39", features = [] }