[package]
name = "optional_struct_macro"
version = "0.4.1"
edition = "2021"
description = "Helper crate implementing the proc_macro for the optional_struct crate"
license = "Apache-2.0"
repository = "https://github.com/lesurp/OptionalStruct"

[dependencies]
proc-macro2 = { version = "1.0.70", features = [] }
quote = { version = "1.0.33", features = [] }
syn = { version = "2.0.39", features = [] }

[lib]
proc-macro = true
